# basket_intelligence_databricks

./: .gitignore  README.md  databricks.yml.example  pyproject.toml
resources/: load_clustering_data.yml
src/basket_intelligence_bundle/: load_data.py
