[project]
name = "basket_intelligence_bundle"
version = "0.0.1"
authors = [{ name = "yu.zhenxiao.yz@gmail.com" }]
requires-python = ">=3.10,<=3.13"

dependencies = [
    "BasketIntelligence@https://github.com/zhenxiay/BasketIntelligence/releases/download/v1.0.0/BasketIntelligence-1.0.0-py3-none-any.whl",
    "soda-core-spark-df (>=3.3.20, <4.0)",
]

[dependency-groups]
dev = [
    "pytest",

    # Code completion support for Lakeflow Declarative Pipelines, also install databricks-connect
    "databricks-dlt",

    # databricks-connect can be used to run parts of this project locally.
    # Note that for local development, you should use a version that is not newer
    # than the remote cluster or serverless compute you connect to.
    # See also https://docs.databricks.com/dev-tools/databricks-connect.html.
    "databricks-connect>=15.4,<15.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/basket_intelligence_bundle"]

[project.scripts]
main = "basket_intelligence_bundle.main:main"
